--- a/ui/main.css
+++ b/ui/main.css
@@ -52,6 +52,7 @@ body::-webkit-scrollbar {
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
     user-select: none;
     align-items: center;
+    cursor: pointer;
 }
 
 .buttonDisabled {
@@ -71,6 +72,7 @@ body::-webkit-scrollbar {
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
     user-select: none;
     align-items: center;
+    cursor: none,
 }
 
 .button:hover {
@@ -143,6 +145,7 @@ body::-webkit-scrollbar {
     padding-left: 0.3rem;
     padding-right: 0.6rem;
     font-size: 1.25rem;
+    min-width: 2.1rem;
 }
 
 .back {
