--- a/ui/main.css
+++ b/ui/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -53,6 +54,64 @@ body::-webkit-scrollbar {
     user-select: none;
     align-items: center;
     cursor: pointer;
+}
+
+.stepper-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: auto;
+    max-width: 53%;
+    height: 10%;
+    margin: auto;
+}
+
+.stepper {
+    width: 50%;
+    height: 5%;
+    background: #303b49;
+    position: relative;
+    top: 10%;
+    margin-top: 0.5rem;
+    overflow: hidden;
+    padding: 0.45rem;
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
+    user-select: none;
+    align-items: center;
+    cursor: pointer;
+}
+
+.stepperDisabled {
+    width: 50%;
+    height: 5%;
+    background: rgba(102, 102, 102, 0.9);
+    position: relative;
+    top: 10%;
+    margin-top: 0.5rem;
+    overflow: hidden;
+    padding: 0.45rem;
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
+    user-select: none;
+    align-items: center;
+    cursor: none;
+}
+
+.pervious-radius {
+    border-radius: 0.3rem 0.0rem 0.0rem 0.3rem;
+}
+
+.next-radius {
+    border-radius: 0.0rem 0.3rem 0.3rem 0.0rem;
+}
+
+.stepper:hover {
+    background-color: #30475e !important;
 }
 
 .buttonDisabled {
@@ -229,4 +288,8 @@ body::-webkit-scrollbar {
 
 .is-header {
     pointer-events: none;
+}
+
+.is-spacer {
+    margin-bottom: 1rem;
 }
