--- a/ui/main.css
+++ b/ui/main.css
@@ -6,7 +6,7 @@
     --main-btn-disabled: rgba(102, 102, 102, 0.9);
     --main-color-text: white;
     --main-color-text-disabled: white;
-    --animation-delay: 0.2s;
+    --animation-delay: 0.3s;
 }
 
 * {
@@ -53,7 +53,7 @@ body::-webkit-scrollbar {
     margin: auto;
     position: relative;
     top: 10%;
-    margin-top: 0.5rem;
+    margin: 0.5rem auto 0rem auto;
     overflow: hidden;
     padding: 0.45rem;
     border-radius: 0.3rem;
@@ -66,36 +66,62 @@ body::-webkit-scrollbar {
     transition: background var(--animation-delay) ease;
 }
 
+.button .header img {
+    width: 100%;
+}
+
 .pin-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
     width: auto;
     max-width: 53%;
     height: 10%;
     margin: auto;
+    margin-top: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row: 1;
+    grid-gap: 0.5rem;
 }
 
 .pin {
-    width: 50%;
-    height: 5%;
+    grid-column: 1/2;
+    height: 100%;
     background: var(--main-btn-bg);
-    position: relative;
-    top: 10%;
-    margin-top: 0.5rem;
     overflow: hidden;
     padding: 0.3rem;
     display: flex;
-    justify-content: start;
+    justify-content: left;
     flex-direction: row;
     box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
     user-select: none;
     align-items: center;
     cursor: pointer;
+    border-radius: 0.3rem;
     transition: background var(--animation-delay) ease;
 }
 
 .pin:hover {
+    background: var(--main-btn-bg-hover) !important;
+    transition: background var(--animation-delay) ease;
+}
+
+.leave {
+    grid-column: 2/3;
+    height: 100%;
+    background: var(--main-btn-bg);
+    overflow: hidden;
+    padding: 0.3rem;
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    box-shadow: 0rem 0rem 0.1rem 0.05rem #000000;
+    user-select: none;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 0.3rem;
+    transition: background var(--animation-delay) ease;
+}
+
+.leave:hover {
     background: var(--main-btn-bg-hover) !important;
     transition: background var(--animation-delay) ease;
 }
@@ -116,7 +142,7 @@ body::-webkit-scrollbar {
     background: var(--main-btn-bg);
     position: relative;
     top: 10%;
-    margin-top: 0.5rem;
+    margin: 0rem auto 0rem auto;
     overflow: hidden;
     padding: 0.45rem;
     display: flex;
@@ -129,13 +155,18 @@ body::-webkit-scrollbar {
     transition: background var(--animation-delay) ease;
 }
 
+.stepper:hover {
+    background: var(--main-btn-bg-hover) !important;
+    transition: background var(--animation-delay) ease;
+}
+
 .stepperDisabled {
     width: 50%;
     height: 5%;
     background: var(--main-btn-disabled);
     position: relative;
     top: 10%;
-    margin-top: 0.5rem;
+    margin: 0rem auto 0rem auto;
     overflow: hidden;
     padding: 0.45rem;
     display: flex;
@@ -169,7 +200,7 @@ input#search {
     user-select: none;
     display: flex;
     flex-direction: row;
-    margin-top: 0.5rem;
+    margin: 0.5rem auto 0rem auto;
 }
 
 input#searchDisabled {
@@ -195,7 +226,7 @@ input#searchDisabled {
     user-select: none;
     display: flex;
     flex-direction: row;
-    margin-top: 0.5rem;
+    margin: 0.5rem auto 0rem auto;
     cursor: none;
 }
 
@@ -208,20 +239,13 @@ input#searchDisabled {
     border-radius: 0.0rem 0.3rem 0.3rem 0.0rem;
 }
 
-.stepper:hover {
-    background: var(--main-btn-bg-hover) !important;
-    transition: background var(--animation-delay) ease;
-}
-
 .buttonDisabled {
     width: auto;
     max-width: 53%;
     height: 10%;
     background: var(--main-btn-disabled);
-    margin: auto;
-    position: relative;
     top: 10%;
-    margin-top: 0.5rem;
+    margin: 0.5rem auto 0rem auto;
     overflow: hidden;
     padding: 0.45rem;
     border-radius: 0.3rem;
@@ -340,11 +364,10 @@ input#searchDisabled {
     width: auto;
     max-width: 55%;
     height: 10%;
-    background: var(--main-btn-bg)c2;
+    background: var(--main-btn-bg);
     margin: auto;
     position: relative;
     top: 10%;
-    margin-top: 0.5rem;
     overflow: hidden;
     padding: 0.45rem;
     border-radius: 0.3rem;
@@ -394,5 +417,5 @@ input#searchDisabled {
 }
 
 .is-spacer {
-    margin-bottom: 0.9rem;
+    margin-bottom: 1rem !important;
 }
